# tpm2-pkcs11

./: .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.md  LICENSE  Makefile-fuzz.am  Makefile-integration.am  Makefile-unit.am  Makefile.am  bootstrap  codecov.yml  configure.ac  test.mk
.ci/: coveralls-upload.sh  coverity.run  docker-prelude.sh  docker.env  docker.run  download-deps.sh  travis.run
.github/workflows/: codeql.yml  main.yml
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  DB_UPGRADE.md  EAP-TLS.md  FAPI.md  FUZZING.md  INITIALIZING.md  INSTALL.md  INTEROPERABILITY.md  KEY_IMPORT_TOOL.md  MAINTAINERS.md  OPENSSL.md  OPENVPN.md  P11.md  PKCS11_TOOL.md  README.md  RELEASE.md  SECURITY.md  SSH.md  SSH_HOSTKEYS.md  coding_standard_c.txt  tpm2-pkcs11-authorization-model.md  tpm2-pkcs11_object_auth_model.md
lib/: tpm2-pkcs11.def  tpm2-pkcs11.map  tpm2-pkcs11.pc.in
misc/: tpm2-pkcs11.openssl.sample.conf
misc/p11-kit/: tpm2_pkcs11.module
src/: pkcs11.c  pkcs11.h
src/lib/: .gitignore  attrs.c  attrs.h  backend.c  backend.h  backend_esysdb.c  backend_esysdb.h  backend_fapi.c  backend_fapi.h  checks.h  config.h.in  config.h.in~  db.c  db.h  debug.h  derive.c  derive.h  digest.c  digest.h  emitter.c  emitter.h  encrypt.c  encrypt.h  general.c  general.h  key.c  key.h  list.h  log.h  mech.c  mech.h  mutex.c  mutex.h  object.c  object.h  openssl_compat.c  openssl_compat.h  parser.c  parser.h  pkcs11t.h  (+27 more)
test/: .gitignore  create.sh
test/fake-tpm/: wrap_tpm.h
test/fuzz/: db-take-lock.fuzz.c  db-token-label.fuzz32.c  init-pin.fuzz.c  init-token-label.fuzz32.c  init-token-sopin.fuzz.c  init-token.fuzz.c  set-pin.fuzz.c  utils-ctx-unwrap-objauth.c  yaml-parser.fuzz.c
test/fuzz/scripts/: fuzz-runner.sh
test/integration/: .gitignore  PKCS11JavaTests.java  key_import-link-fapi.sh.fapi  key_import-link.sh.nosetup  largebin.h  main-test.c  nss-tests.sh  openssl.sh  p11-tool-fapi.sh.fapi  p11-tool.sh.nosetup  p11tool.int  pkcs-crypt.int.c  pkcs-ecdh.int.c  pkcs-find-objects.int.c  pkcs-get-attribute-value.int.c  pkcs-get-mechanism.int.c  pkcs-initialize-finalize.int.c  pkcs-keygen.int.c  pkcs-lockout.int.c  pkcs-login-logout.int.c  pkcs-misc.int.c  pkcs-open-close-session.int.c  pkcs-session-state.c  pkcs-sign-verify.int.c  pkcs-tpm-ecc-support-check.int.c  pkcs11-dbup.sh.nosetup  pkcs11-javarunner.sh.java  pkcs11-tool-init-fapi.sh.fapi  pkcs11-tool-init.sh.nosetup  pkcs11-tool.sh  pkcstool.int  ptool-link-persistent.sh.nosetup  ptool-link.sh.nosetup  python-pkcs11.sh  test.c  test.h  test_policy.sh  tls-tests.sh
test/integration/fixtures/: ca.key  ca.pem  client.cnf  hmac.hex.key  ossl-req-ca.cnf  ossl-req-cert.cnf  ossl.cnf  smimeextensions  tss2engine.cnf
test/integration/issue335/: Makefile  README.md  client.cnf  client.sh  dh  index.txt  server.key  server.pem  server.sh
test/integration/scripts/: create_fapi_store.sh  create_pkcs_store.sh  helpers.sh  int-test-funcs.sh  int-test-setup.sh  primary.ctx
test/unit/: test_attr.c  test_db.c  test_log.c  test_parser.c  test_pkcs11.c  test_twist.c  test_utils.c
tools/: .gitignore  README.md  pyproject.toml  run-python-tests  setup.py  tpm2_ptool  tpm2_ptool.py
tools/key_import/: import.c
tools/tests/: test_ptool.py  test_tpm2_ptool.py
tools/tpm2_pkcs11/: __init__.py  command.py  commandlets_keys.py  commandlets_store.py  commandlets_token.py  db.py  objects.py  pkcs11t.py  policies.py  tpm2.py  tpm2_ptool.py  utils.py
tools/tpm2_ptool/: setup.py
tools/tpm2_ptool/tpm2_pkcs11/: __init__.py  command.py  commandlets_keys.py  tpm2.py
